#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-03
2012-03-27 Andy Salnikov
- upgrade to pdsdata V03-04-01
- new class bld.BldDataEBeamV3

Tag: V00-02-02
2012-03-14 Andy Salnikov
- upgrade to pdsdata V03-03-01A
  - new class timepix.ConfigV2

Tag: V00-02-01
2012-02-17 Andy Salnikov
- upgrade to pdsdata V03-02-12
  - new class timepix.DataV2
- added diodeGain(int) method (does not exist in pdsdata)
  and gain enums to ipimb.ConfigV{1,2} classes

Tag: V00-02-00
2012-02-06 Andy Salnikov
- added cspad2x2 package
- moved cspad.MiniElementV1 to cspad2x2.ElementV1
- added cspad2x2.ConfigV1

Tag: V00-01-01
2012-01-12 Andy Salnikov
- adding timepix package
- Princeton.FrameV1 data() method now return 2-dim array
- Camera.FrameV1 now has two methods data8() and data16() that return
  either 8-bit or 16-bit data

Tag: V00-01-00
2011-12-09 Andrei Salnikov
- few small changes related to ndarray migration
- evr.IOChannel is now value-type class

Tag: V00-00-14
2011-11-12 Andrei Salnikov
- new class encoder.ConfigV2
- new package gsc16ai with two classes ConfigV1 and DataV1

Tag: V00-00-13
2011-10-04 Andrei Salnikov
- CsPad.Element image data type changed from uint16_t to int16_t,
  calibration output which is essentially signed can reuse the same
  definitions
- methods common_mode(int) and sectionMask() added to CsPad.Element
  classes, this is to simplify data handling and unify with 
  calibrated data interface

Tag: V00-00-12
2011-09-12 Andrei Salnikov
- adding CsPad.MiniElementV1 class

Tag: V00-00-11
2011-08-29 Andrei Salnikov
- added Bld::BldDataPimV1 class

Tag: V00-00-10
2011-08-22 Andrei Salnikov