@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-04
+2012-05-01 Andy Salnikov
+- new class epics.ConfigV1
+
 Tag: V00-02-03
 2012-03-27 Andy Salnikov
 - upgrade to pdsdata V03-04-01
